welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: identifier expected but ')' found.
while (!estFaceMur:) {avance()
                   ^Program:4: error: ')' expected but '}' found.
	}
        ^